--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
-    <title>Test Page: Don't Panic</title>
+    <title>baas.co</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <body>
-    <h1>I'm an h1</h1>
-    <ul>
-      <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
-      </li>
-      <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
-      </li>
-      <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
-      </li>
-    </ul>
-    <h2>I'm an h2</h2>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
-    </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
-    </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
-    </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div id="placeholder">
+      <h1>reqpro</h1>
     </div>
   </body>
 </html>
